fixed vertical spacing within reviews, modified dropdowns/checkbox for reviews

--- a/site/src/component/Review/Review.scss
+++ b/site/src/component/Review/Review.scss
@@ -6,8 +6,10 @@
 .add-review-button {
   padding: 10px 25px;
   font-weight: bold;
-  margin: 0 auto;
+  margin: 1rem auto 0 auto;
   font-size: 1.25rem;
+  background-color: var(--peterportal-primary-color-1);
+  border-radius: var(--border-radius);
 }
 
 // sort and filter reviews
@@ -15,19 +17,19 @@
   display: flex;
   flex-direction: row;
   gap: 1rem;
-  // border: 1px solid red;
 }
-.sort-dropdown,
-.filter-dropdown {
+.sort-dropdown {
   min-width: 10rem;
-  // border: 1px solid red;
+}
+.filter-dropdown {
+  min-width: 15rem;
 }
 .verified-only-checkbox {
-  // TODO: this CSS class is not being applied to the checkbox
-  background: none;
-  color: var(--text);
-  color: white;
-  // border: 1px solid red;
+  display: flex;
+  align-items: center;
+  // padding: 0 1rem;
+  // background-color: var(--overlay2);
+  // border-radius: 4px;
 }
 
 // subreviews
@@ -140,17 +142,21 @@
   }
 }
 .subreview-author {
+  margin: 0;
   display: flex;
   flex-direction: row;
   justify-content: left;
   align-items: center;
   color: var(--peterportal-mid-gray);
-  // border: 1px solid red;
+}
+.subreview-author-name {
+  margin: 0;
 }
 .subreview-author-verified,
 .subreview-author-author {
+  margin: 0;
+  display: flex;
   margin-left: 0.5rem;
-  // border: 1px solid red;
 }
 
 // tags
@@ -159,7 +165,7 @@
   flex-direction: row;
   justify-content: left;
   flex-wrap: wrap;
-  gap: 0.5rem;
+  gap: 0.75rem;
 }
 .subreview-tag {
   padding: 1rem;
@@ -171,14 +177,17 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  // border: 1px solid red;
 }
 // vote on a review
 .subreview-voting {
   display: flex;
   flex-direction: row;
+  align-items: center;
   gap: 0.5rem;
-  // border: 1px solid red;
+}
+.subreview-voting-question,
+.subreview-voting-count {
+  margin: 0;
 }
 .subreview-voting-buttons {
   display: flex;
@@ -188,13 +197,14 @@
 }
 .upvote,
 .downvote {
+  margin: 0;
+  padding: 0;
   outline: none;
   border: none;
-  padding: 0;
   height: fit-content;
   background-color: transparent;
-  transition: 0.25s;
   color: var(--peterportal-mid-gray);
+  transition: 0.25s;
 }
 .colored-upvote {
   color: var(--peterportal-primary-color-1);
@@ -219,6 +229,7 @@
 @media only screen and (max-width: 599px) {
   .sort-filter-menu {
     flex-direction: column;
+    gap: 0.5rem;
   }
   .subreview-content {
     flex-direction: column;
